// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled dropdown while loading 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="root"
    >
      State
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 1,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <select
          className="input"
          disabled={true}
          id="root"
          name="region"
          onBlur={[Function]}
          onChange={[Function]}
          value="TX"
        >
          <option
            disabled={null}
            hidden={null}
            id="SAMPLE-ID"
            value=""
          >
            Loading...
          </option>
        </select>
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      >
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </span>
      </span>
    </span>
    <p
      className="root"
    />
  </div>
</form>
`;

exports[`renders dropdown with regions 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="root"
    >
      State
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 1,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <select
          className="input"
          disabled={false}
          id="root"
          name="region"
          onBlur={[Function]}
          onChange={[Function]}
          value="TX"
        >
          <option
            disabled={null}
            hidden={null}
            id="SAMPLE-ID"
            value="TX"
          >
            Texas
          </option>
          <option
            disabled={null}
            hidden={null}
            id="SAMPLE-ID"
            value="NM"
          >
            New Mexico
          </option>
        </select>
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      >
        <span
          className="root"
        >
          <svg
            className="icon"
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </span>
      </span>
    </span>
    <p
      className="root"
    />
  </div>
</form>
`;

exports[`renders input with no regions 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="root"
  >
    <label
      className="label"
      htmlFor="root"
    >
      State
    </label>
    <span
      className="root"
      style={
        Object {
          "--iconsAfter": 0,
          "--iconsBefore": 0,
        }
      }
    >
      <span
        className="input"
      >
        <input
          className="input"
          disabled={false}
          id="root"
          name="region"
          onBlur={[Function]}
          onChange={[Function]}
          value="TX"
        />
      </span>
      <span
        className="before"
      />
      <span
        className="after"
      />
    </span>
    <p
      className="root"
    />
  </div>
</form>
`;
